@@ -1473,4 +1473,8 @@ No match
         End
 ------------------------------------------------------------------
 
+/.*$/8<any>
+    \x{1ec5} 
+ 0: \x{1ec5}
+
 / End of testinput5 /
